ARM64: dts: oplus6785: Enable indep gesture support
Signed-off-by: bengris32 <bengris32@protonmail.ch>
Change-Id: I30c06d2801b28d8096f3e363777aa5118b7be600

--- a/arch/arm64/boot/dts/mediatek/oplus6785/common/oplus6785_20730.dtsi
+++ b/arch/arm64/boot/dts/mediatek/oplus6785/common/oplus6785_20730.dtsi
@@ -50,6 +50,7 @@
 		incell_screen;
 		fw_edge_limit_support;
 		black_gesture_support;
+		black_gesture_indep_support;
 		charger_pump_support;
 		headset_pump_support;
 		esd_handle_support;
@@ -114,6 +115,7 @@
 		project_id = <20730>;
 		irq_need_dev_resume_ok;
 		black_gesture_support;
+		black_gesture_indep_support;
 		fw_edge_limit_support;
 		pressure_report_support;
 		charger_pump_support;
@@ -160,6 +162,7 @@
                 project_id = <20730>;
                 irq_need_dev_resume_ok;
                 black_gesture_support;
+		black_gesture_indep_support;
                 fw_edge_limit_support;
                 pressure_report_support;
                 charger_pump_support;
