--- a/drivers/misc/mediatek/thermal/common/thermal_zones/Makefile
+++ b/drivers/misc/mediatek/thermal/common/thermal_zones/Makefile
@@ -68,8 +68,15 @@ else
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/mcupm/$(PDIR)
 endif
 
+obj-$(CONFIG_HORAE_THERMAL_SHELL) += mtk_ts_ntc_cust.o
+
 ifeq ($(CONFIG_MACH_MT6877),y)
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/mcupm/mt6853/
+endif
+
+obj-$(CONFIG_OPLUS_TEMP_NTC) += oplus_ts_tempntc_s.o
+ifneq ($(CONFIG_OPLUS_TEMP_NTC),y)
+obj-$(CONFIG_THERMAL) += oplus_ts_tempntc.o
 endif
 
 ifneq (,$(filter $(CONFIG_MTK_LEGACY_THERMAL_PLATFORM), "mt6779"))
@@ -127,7 +134,9 @@ endif
 ifneq (,$(filter $(CONFIG_MTK_PLATFORM), "mt6785"))
 
 obj-$(CONFIG_THERMAL) += mtk_ts_battery.o
-
+ifeq ($(CONFIG_MACH_MT6781),)
+obj-$(CONFIG_THERMAL) += mtk_ts_chg_mos.o
+endif
 obj-$(CONFIG_THERMAL) += mtk_ts_bts.o
 obj-$(CONFIG_THERMAL) += mtk_ts_btsmdpa.o
 
@@ -253,6 +262,9 @@ obj-$(CONFIG_THERMAL) += mtk_ts_pmic.o
 obj-$(CONFIG_THERMAL) += mtk_ts_charger_v1.o
 #obj-$(CONFIG_THERMAL) += mtk_ts_charger2.o
 
+ifneq (,$(filter $(CONFIG_ARCH_MTK_PROJECT), "k6877v1_64"))
+obj-$(CONFIG_THERMAL) += mtk_ts_flashlight.o
+endif
 
 ifneq ($(CONFIG_MTK_COMBO_WIFI),)
     obj-$(CONFIG_THERMAL) += mtk_ts_wmt.o
@@ -263,10 +275,12 @@ obj-$(CONFIG_THERMAL) += mtk_ts_imgsensor.o
 endif
 
 
-ifneq (,$(filter $(CONFIG_MTK_PLATFORM), "mt6885"))
+ifneq (,$(filter $(CONFIG_MTK_PLATFORM), "mt6885" "mt6893"))
 
 obj-$(CONFIG_THERMAL) += mtk_ts_battery.o
-
+#ifdef OPLUS_FEATURE_CHG_BASIC
+obj-$(CONFIG_THERMAL) += mtk_ts_chg_mos.o
+#endif
 obj-$(CONFIG_THERMAL) += mtk_ts_bts.o
 obj-$(CONFIG_THERMAL) += mtk_ts_btsmdpa.o
 obj-$(CONFIG_THERMAL) += mtk_ts_btsnrpa.o
@@ -275,9 +289,11 @@ obj-$(CONFIG_THERMAL) += mtk_ts_cpu_noBank.o
 obj-$(CONFIG_THERMAL) += mtk_ts_pa.o
 obj-$(CONFIG_THERMAL) += mtk_ts_pa_thput.o
 obj-$(CONFIG_THERMAL) += mtk_ts_pmic.o
-obj-$(CONFIG_THERMAL) += mtk_ts_charger.o
+obj-$(CONFIG_THERMAL) += mtk_ts_charger_v1.o
 #obj-$(CONFIG_THERMAL) += mtk_ts_charger2.o
-
+ifeq (,$(filter $(CONFIG_ARCH_MTK_PROJECT), "k6889v1_64"))
+obj-$(CONFIG_THERMAL) += mtk_ts_flashlight.o
+endif
 
 ifneq ($(CONFIG_MTK_COMBO_WIFI),)
     obj-$(CONFIG_THERMAL) += mtk_ts_wmt.o
