sound: Import minimal OEM changes
Change-Id: Ib1d30027379665108097a302e4b259ec4e863d4c
Signed-off-by: bengris32 <bengris32@protonmail.ch>

--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -1449,3 +1449,7 @@ config SND_SOC_SMARTPAINFO
 source "sound/soc/codecs/cs35l43/Kconfig"
 
 endmenu
+
+#ifdef OPLUS_ARCH_EXTENDS
+source "sound/soc/codecs/audio/Kconfig"
+#endif /* OPLUS_ARCH_EXTENDS */
