--- a/drivers/nfc/Kconfig
+++ b/drivers/nfc/Kconfig
@@ -48,6 +48,11 @@ config NFC_PORT100
 
 	  If unsure, say N.
 
+config OPLUS_NFC
+	bool "config oplus nfc chipset"
+	help
+	  define this config to get nfc chipset version from dts.
+
 source "drivers/nfc/fdp/Kconfig"
 source "drivers/nfc/pn544/Kconfig"
 source "drivers/nfc/pn533/Kconfig"
@@ -58,4 +63,5 @@ source "drivers/nfc/st-nci/Kconfig"
 source "drivers/nfc/nxp-nci/Kconfig"
 source "drivers/nfc/s3fwrn5/Kconfig"
 source "drivers/nfc/st95hf/Kconfig"
+source "drivers/nfc/nq330-i2c/Kconfig"
 endmenu
