--- a/drivers/misc/mediatek/connectivity/Makefile
+++ b/drivers/misc/mediatek/connectivity/Makefile
@@ -64,7 +64,12 @@ export CFG_FM_CHIP=mt6631
 # Do build-in for xxx.c checking
 subdir-ccflags-y += -D MTK_WCN_REMOVE_KERNEL_MODULE
 subdir-ccflags-y += -D MTK_WCN_BUILT_IN_DRIVER
-obj-y += wmt_drv/
-obj-y += wmt_chrdev_wifi/
-obj-y += wlan_drv_gen4m/
 endif
+
+obj-$(CONFIG_MTK_COMBO) += common/
+obj-$(CONFIG_MTK_COMBO_WIFI) += wlan/adaptor/
+obj-$(CONFIG_MTK_COMBO_CHIP_CONSYS_6785) += wlan/core/gen4m/
+obj-$(CONFIG_MTK_BTIF) += bt/mt66xx/wmt/
+obj-$(CONFIG_MTK_COMBO_GPS) += gps/
+obj-$(CONFIG_MTK_FMRADIO) += fmradio/
+obj-$(CONFIG_MTK_CONNFEM) += connfem/
