drivers: connectivity: Set required options for FM Radio driver
Change-Id: Idb8e63e629a15da784de7131625617cc286c39b4
Signed-off-by: bengris32 <bengris32@protonmail.ch>

--- a/drivers/misc/mediatek/connectivity/Makefile
+++ b/drivers/misc/mediatek/connectivity/Makefile
@@ -58,6 +58,8 @@ export MTK_ANDROID_EMI=y
 export WIFI_IP_SET=2
 export WIFI_ECO_VER=1
 export MTK_WLAN_SERVICE=yes
+export CFG_FM_CHIP_ID=6785
+export CFG_FM_CHIP=mt6631
 
 # Do build-in for xxx.c checking
 subdir-ccflags-y += -D MTK_WCN_REMOVE_KERNEL_MODULE
