--- a/arch/arm64/configs/nashc_defconfig
+++ b/arch/arm64/configs/nashc_defconfig
@@ -155,13 +155,17 @@ CONFIG_MTK_ECCCI_DRIVER=y
 CONFIG_MTK_ECCCI_C2K=y
 CONFIG_MTK_BTIF=y
 CONFIG_MTK_COMBO=y
+CONFIG_MTK_COMBO_CHIP_CONSYS_6785=y
+CONFIG_MTK_COMBO_BT=y
 CONFIG_MTK_COMBO_GPS=y
 CONFIG_MTK_COMBO_WIFI=y
 CONFIG_MTK_DHCPV6C_WIFI=y
 CONFIG_MTK_GPS_SUPPORT=y
 CONFIG_MTK_FMRADIO=y
 CONFIG_MTK_FM_CHIP="MT6631_FM"
+CONFIG_MTK_CONNFEM=y
 CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
+CONFIG_WLAN_DRV_BUILD_IN=y
 CONFIG_MTK_TEE_GP_SUPPORT=y
 CONFIG_HAVE_MTK_ENABLE_GENIEZONE=y
 CONFIG_MTK_ENABLE_GENIEZONE=y
