ARM64: configs: Enable weight based blkio cgroup
This enables CONFIG_BLK_CGROUP & CONFIG_CFQ_GROUP_IOSCHED.

Change-Id: I98e460241bb81763bb7dd81160b2c1fa29848e0b
Signed-off-by: Ankit Jain <jankit@codeaurora.org>

--- a/arch/arm64/configs/nashc_defconfig
+++ b/arch/arm64/configs/nashc_defconfig
@@ -2,6 +2,7 @@ CONFIG_PREEMPT=y
 CONFIG_IKHEADERS=m
 CONFIG_LOG_BUF_SHIFT=19
 CONFIG_UCLAMP_TASK=y
+CONFIG_BLK_CGROUP=y
 CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CPUSETS=y
 # CONFIG_RD_GZIP is not set
@@ -44,6 +45,7 @@ CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_BLK_DEV_BSG is not set
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
+CONFIG_CFQ_GROUP_IOSCHED=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_ZSMALLOC=y
 CONFIG_XFRM_MIGRATE=y
