ARM64: configs: Enable Oplus sensor configs
Change-Id: I6ce40bb934e8be0482195727c9a9551c2639b53c
Signed-off-by: bengris32 <bengris32@protonmail.ch>

--- a/arch/arm64/configs/nashc_defconfig
+++ b/arch/arm64/configs/nashc_defconfig
@@ -142,6 +142,13 @@ CONFIG_CUSTOM_KERNEL_UNCALI_MAG_SENSOR=y
 CONFIG_MTK_UNCALI_MAGHUB=y
 CONFIG_MTK_UNCALI_GYROHUB=y
 CONFIG_MTK_UNCALI_ACCHUB=y
+CONFIG_OPLUS_FEATURE_CAMERA_PROTECT=y
+CONFIG_OPLUS_FEATURE_FREE_FALL=y
+CONFIG_OPLUS_FEATURE_PICKUP_DETECT=y
+CONFIG_OPLUS_FEATURE_FP_DISPLAY=y
+CONFIG_OPLUS_FEATURE_LUX_AOD=y
+CONFIG_OPLUS_FEATURE_PEDO_MINUTE=y
+CONFIG_OPLUS_FEATURE_TP_GESTURE=y
 CONFIG_MTK_CCCI_DEVICES=y
 CONFIG_MTK_MD1_SUPPORT=12
 CONFIG_MTK_ECCCI_DRIVER=y
