drivers: soc: oplus: Import oplus_custom driver
* This driver provides an interface for accessing calibration data. Mainly
  used by oplusSensor service to calibrate sensors and ALS.

Change-Id: I693724ddc18670db56d4e461e0724b1a142081c4
Signed-off-by: bengris32 <bengris32@protonmail.ch>

--- a/drivers/soc/oplus/Kconfig
+++ b/drivers/soc/oplus/Kconfig
@@ -1,4 +1,5 @@
 source "drivers/soc/oplus/device_info/Kconfig"
 source "drivers/soc/oplus/mtk_boot/Kconfig"
 source "drivers/soc/oplus/mtk_boot_reason/Kconfig"
+source "drivers/soc/oplus/oplus_custom/Kconfig"
 source "drivers/soc/oplus/oplus_project/Kconfig"
