ARM64: configs: Enable oplus_custom driver
Change-Id: I610ec5c96496ebc8611dac01e658ca789719dabc
Signed-off-by: bengris32 <bengris32@protonmail.ch>

--- a/arch/arm64/configs/nashc_defconfig
+++ b/arch/arm64/configs/nashc_defconfig
@@ -383,6 +383,7 @@ CONFIG_ION=y
 CONFIG_MTK_ION=y
 CONFIG_MTK_PMIC_WRAP=y
 CONFIG_OPLUS_DEVICE_IFNO=y
+CONFIG_OPLUS_FEATURE_CUSTOM=y
 CONFIG_OPLUS_FEATURE_OPROJECT=y
 CONFIG_IIO=y
 CONFIG_IIO_BUFFER=y
