--- a/arch/arm64/configs/nashc_defconfig
+++ b/arch/arm64/configs/nashc_defconfig
@@ -374,6 +374,7 @@ CONFIG_MMC_MTK=y
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_TRIGGERS=y
+CONFIG_LEDS_TRIGGER_BACKLIGHT=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 # CONFIG_RTC_SYSTOHC is not set
 CONFIG_RTC_DRV_MT6358=y
